--- a/src/style.css
+++ b/src/style.css
@@ -1,156 +1,195 @@
-body {
-    background-color: #9f9da7;
-    font-size: 1.6rem;
-    font-family: "Open Sans", sans-serif;
-    color: #2b3e51;
-  }
-  
-  h2 {
-    font-weight: 300;
-    text-align: center;
-  }
-  
-  p {
-    position: relative;
-  }
-  
-  a,
-  a:link,
-  a:visited,
-  a:active {
-    color: #3ca9e2;
-    -webkit-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-  }
-  a:focus, a:hover,
-  a:link:focus,
-  a:link:hover,
-  a:visited:focus,
-  a:visited:hover,
-  a:active:focus,
-  a:active:hover {
-    color: #329dd5;
-    -webkit-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-  }
-  
-  #reset-form-wrap {
-    background-color: #fff;
-    width: 35%;
-    margin: 30px auto;
-    text-align: center;
-    padding: 20px 0 0 0;
-    border-radius: 4px;
-    box-shadow: 0px 30px 50px 0px rgba(0, 0, 0, 0.2);
-  }
-  
-  #reset-form {
-    padding: 0 60px;
-  }
-  
-  input {
-    display: block;
-    box-sizing: border-box;
-    width: 100%;
-    outline: none;
-    height: 60px;
-    line-height: 60px;
-    border-radius: 4px;
-  }
-  
-  input[type="password"],
-  input[type="email"] {
-    width: 100%;
-    padding: 0 0 0 10px;
-    margin: 0;
-    color: #8a8b8e;
-    border: 1px solid #c2c0ca;
-    font-style: normal;
-    font-size: 16px;
-    -webkit-appearance: none;
-       -moz-appearance: none;
-            appearance: none;
-    position: relative;
-    display: inline-block;
-    background: none;
-  }
-  input[type="password"]:focus,
-  input[type="email"]:focus {
-    border-color: #3ca9e2;
-  }
-  input[type="password"]:focus:invalid,
-  input[type="email"]:focus:invalid {
-    color: #cc1e2b;
-    border-color: #cc1e2b;
-  }
-  input[type="password"]:valid ~ .validation,
-  input[type="email"]:valid ~ .validation {
-    display: block;
-    border-color: #0C0;
-  }
-  input[type="password"]:valid ~ .validation span, 
-  input[type="email"]:valid ~ .validation span {
-    background: #0C0;
-    position: absolute;
-    border-radius: 6px;
-  }
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+html,body{
+  display: grid;
+  height: 100%;
+  place-items: center;
+  text-align: center;
+  background: #f2f2f2;
+}
+.container{
+  background: #fff;
+  padding: 20px 30px;
+  width: 420px;
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+.container header{
+  padding-top: 5px;
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 33px;
+}
+.container form{
+  margin: 5px 8px;
+}
+.container form .error-text{
+  background: #F8D7DA;
+  padding: 8px 0;
+  border-radius: 5px;
+  color: #8B3E46;
+  border: 1px solid #F5C6CB;
+  display: none;
+}
+.container form .error-text.matched{
+  background: #D4EDDA;
+  color: #588C64;
+  border-color: #C3E6CB;
+}
+.container form .field{
+  width: 100%;
+  height: 45px;
+  display: flex;
+  margin: 15px 0;
+  position: relative;
+}
+form .field input{
+  width: 100%;
+  height: 100%;
+  border: 1px solid lightgrey;
+  padding-left: 15px;
+  outline: none;
+  border-radius: 5px;
+  font-size: 17px;
+  transition: all 0.3s;
+}
+form .field input::placeholder{
+  font-size: 16px;
+}
+form .field input:focus{
+  border-color: #27ae60;
+  box-shadow: inset 0 0 3px #2fd072;
+}
+form .field .show{
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 14px;
+  font-weight: 600;
+  user-select: none;
+  cursor: pointer;
+  display: none;
+}
+form .field .show.active{
+  color: #27ae60;
+}
+form .resetbtn{
+  width: 100%;
+  height: 45px;
+  margin: 3px 0 10px 0;
+  border: none;
+  outline: none;
+  background: #27ae60;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  cursor: no-drop;
+  opacity: 0.7;
+}
+form .resetbtn.active{
+  cursor: pointer;
+  opacity: 1;
+  transition: all 0.3s;
+}
+form .resetbtn.active:hover{
+  background: #219150;
+}
 
-  input[type="password"]:valid ~ .validation span:first-child,
-  input[type="email"]:valid ~ .validation span:first-child {
-    top: 30px;
-    left: 14px;
-    width: 20px;
-    height: 3px;
-    -webkit-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-  }
-  input[type="password"]:valid ~ .validation span:last-child,
-  input[type="email"]:valid ~ .validation span:last-child {
-    top: 35px;
-    left: 8px;
-    width: 11px;
-    height: 3px;
-    -webkit-transform: rotate(45deg);
-            transform: rotate(45deg);
-  }
-  
-  .validation {
-    display: none;
-    position: absolute;
-    content: " ";
-    height: 60px;
-    width: 30px;
-    right: 15px;
-    top: 0px;
-  }
-  
-  input[type="submit"] {
-    border: none;
-    display: block;
-    background-color: #3ca9e2;
-    color: #fff;
-    font-weight: bold;
-    text-transform: uppercase;
-    cursor: pointer;
-    -webkit-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-    font-size: 18px;
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    text-align: center;
-  }
-  input[type="submit"]:hover {
-    background-color: #329dd5;
-    -webkit-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-  }
-  
-  #reset-password-wrap {
-    background-color: #eeedf1;
-    color: #8a8b8e;
-    font-size: 14px;
-    width: 100%;
-    padding: 10px 0;
-    border-radius: 0 0 4px 4px;
-  }
+form .reset{
+  width: 100%;
+  height: 45px;
+  margin: 3px 0 10px 0;
+  border: none;
+  outline: none;
+  background: #27ae60;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  cursor: no-drop;
+  opacity: 0.7;
+}
+form .reset{
+  cursor: pointer;
+  opacity: 1;
+  transition: all 0.3s;
+}
+form .reset:hover{
+  background: #219150;
+}
+
+form .field input[type="email"] {
+  width: 100%;
+  padding: 0 0 0 10px;
+  margin: 0;
+  color: #8a8b8e;
+  border: 1px solid #c2c0ca;
+  font-style: normal;
+  font-size: 16px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  position: relative;
+  display: inline-block;
+  background: none;
+}
+
+form .field  input[type="email"]:focus {
+  border-color: #3ca9e2;
+}
+
+form .field input[type="email"]:focus:invalid {
+  color: #cc1e2b;
+  border-color: #cc1e2b;
+}
+
+form .field  input[type="email"]:valid ~ .validation {
+  display: block;
+  border-color: #0C0;
+}
+
+form .field input[type="email"]:valid ~ .validation span {
+  background: #0C0;
+  position: absolute;
+  border-radius: 6px;
+}
+
+
+form .field input[type="email"]:valid ~ .validation span:first-child {
+  top: 30px;
+  left: 14px;
+  width: 20px;
+  height: 3px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+form .field  input[type="email"]:valid ~ .validation span:last-child {
+  top: 35px;
+  left: 8px;
+  width: 11px;
+  height: 3px;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+form .field .validation{
+  display: none;
+  position: absolute;
+  content: " ";
+  height: 60px;
+  width: 30px;
+  right: 15px;
+  top: 0px;
+}
+
