User Account Dashboard

--- a/src/acct.css
+++ b/src/acct.css
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Lato:400,700';
+/* @import 'https://fonts.googleapis.com/css?family=Lato:400,700';
 
 body {
   color: #484848;
@@ -74,4 +74,4 @@ label {
 
 #btnDeposit, #btnWithdraw {
     width: 8em;
-}
+} */
