--- a/src/css/style.css
+++ b/src/css/style.css
@@ -299,10 +299,6 @@ body {
 }
 /* NAVBAR */
 
-
-
-
-
 /* MAIN */
 #content main {
 	width: 100%;
@@ -421,10 +417,6 @@ body {
 	font-size: 10px;
 	font-weight: 600;	
 }
-
-
-
-
 
 #content main .table-data {
 	display: flex;
@@ -576,10 +568,345 @@ color: red;
 /* CONTENT */
 
 
+/* Deposit start  */
 
 
+.flex {
+	
+	display: flex;
+	flex-wrap:wrap;
+	justify-content: center;
+	align-items:center;
+	margin: 0 auto;
+	border-radius:5px;
+  }
+  .element-center {
+	display: flex;
+	flex-direction:column;
+	justify-content: center;
+  }
+  
+  .typewrite {
+	  font-size: 16pt;
+	  margin: auto;
+	  display: flex;
+	  justify-content: center;
+  }
+  
+  
+  
+  #inputs {
+	  padding: 10px;
+  }
+  #inputs h2 {
+	padding: 10px;
+	color:var(--dark);
+	background: transparent;
+	font-size: 16px;
+}
+  
+  input,
+  button {
+	font-size: .85em;
+	padding: .65em 1em;
+	border-radius: .3em;
+	outline: 0;
+  }
+  input {
+	border: 2px solid #dcdcdc;
+	margin-right: 1em;
+  }
+  
+  button {
+	  color: white;
+	  background: #508abc;
+	  border: solid 1px;
+	  border-color: rgba(0, 0, 0, .1);
+	  cursor: pointer;
+  }
+  
+  label {
+	  font-size: 3em;
+	  color:var(--dark);
+	  background: transparent;
+  }
+  
+  #btnDeposit, #btnWithdraw {
+	  width: 8em;
+  }
+
+/* card start  */
+
+.container-fit{
+    min-height: 100vh;
+	background: var(--grey);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+    padding-bottom: 60px;
+}
+
+.container-fit form{
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 10px 15px rgba(0,0,0,.1);
+    padding: 20px;
+    width: 600px;
+    padding-top: 160px;
+}
+
+.container-fit form .inputBox{
+    margin-top: 20px;
+}
+
+.container-fit form .inputBox span{
+    display: block;
+    color:#999;
+    padding-bottom: 5px;
+}
+
+.container-fit  form .inputBox input,
+.container-fit  form .inputBox select{
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border:1px solid rgba(0,0,0,.3);
+    color:#444;
+}
+
+.container-fit  form .flexbox{
+    display: flex;
+    gap:15px;
+}
+.container-fit  form .flexbox .inputBox{
+    flex:1 1 150px;
+}
+
+.container-fit  form .submit-btn{
+    width: 100%;
+    background:linear-gradient(45deg, rgb(43, 137, 226), rgb(20, 228, 255));
+    margin-top: 20px;
+    padding: 10px;
+    font-size: 20px;
+    color:#fff;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .2s linear;
+}
+
+.container-fit  form .submit-btn:hover{
+    letter-spacing: 2px;
+    opacity: .8;
+}
+
+.container-fit .card-container{
+    margin-bottom: -150px;
+    position: relative;
+    height: 250px;
+    width: 400px;
+}
+
+.container-fit  .card-container .front{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0; left: 0;
+    background:linear-gradient(45deg, rgb(43, 137, 226), rgb(20, 228, 255));
+    border-radius: 5px;
+    backface-visibility: hidden;
+    box-shadow: 0 15px 25px rgba(0,0,0,.2);
+    padding:20px;
+    transform:perspective(1000px) rotateY(0deg);
+    transition:transform .4s ease-out;
+}
+
+.container-fit  .card-container .front .image{
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+    padding-top: 10px;
+}
+
+.container-fit  .card-container .front .image img{
+    height: 50px;
+}
+
+.container-fit  .card-container .front .card-number-box{
+    padding:30px 0;
+    font-size: 22px;
+    color:#fff;
+}
+
+.container-fit  .card-container .front .flexbox{
+    display: flex;
+}
+
+.container-fit .card-container .front .flexbox .box:nth-child(1){
+    margin-right: auto;
+}
+.container-fit  .card-container .front .flexbox .box{
+    font-size: 15px;
+    color:#fff;
+}
+
+.container-fit  .card-container .back{
+    position: absolute;
+    top:0; left: 0;
+    height: 100%;
+    width: 100%;
+    background:linear-gradient(45deg, rgb(43, 137, 226), rgb(20, 228, 255));
+    border-radius: 5px;
+    padding: 20px 0;
+    text-align: right;
+    backface-visibility: hidden;
+    box-shadow: 0 15px 25px rgba(0,0,0,.2);
+    transform:perspective(1000px) rotateY(180deg);
+    transition:transform .4s ease-out;
+}
+
+.container-fit .card-container .back .stripe{
+    background: #000;
+    width: 100%;
+    margin: 10px 0;
+    height: 50px;
+}
+
+.container-fit  .card-container .back .box{
+    padding: 0 20px;
+}
+
+.container-fit  .card-container .back .box span{
+    color:#fff;
+    font-size: 15px;
+}
+
+.container-fit  .card-container .back .box .cvv-box{
+    height: 50px;
+    padding: 10px;
+    margin-top: 5px;
+    color:#333;
+    background: #fff;
+    border-radius: 5px;
+    width: 100%;
+}
+
+.container-fit  .card-container .back .box img{
+    margin-top: 30px;
+    height: 30px;
+}
+
+/* payment start  */
+.container-pay{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding:100px;
+	min-height: 100vh;
+}
+  
+  .container-pay{
+	padding:20px;
+	width:700px;
+	background: var(--grey);
+	box-shadow: 0 5px 10px rgba(0,0,0,.1);
+  }
+  
+  .container-pay .row{
+	display: flex;
+	flex-wrap: wrap;
+	gap:15px;
+  }
+  
+  .container-pay .row .col{
+	flex:1 1 250px;
+  }
+  
+  .container-pay .row .col .title{
+	font-size: 20px;
+	color: var(--dark);
+	padding-bottom: 5px;
+	text-transform: uppercase;
+  }
+  
+  .container-pay form .row .col .inputBox{
+	margin:15px 0;
+  }
+  
+  .container-pay form .row .col .inputBox span{
+	margin-bottom: 10px;
+	display: block;
+	color: var(--dark);
+  }
+  
+  .container-pay form .row .col .inputBox input{
+	width: 100%;
+	border:1px solid  var(--dark);;
+	padding:10px 15px;
+	font-size: 15px;
+	text-transform: none;
+  }
+  
+  .container-pay form .row .col .inputBox input:focus{
+	border:1px solid #000;
+  }
+  
+  .container-pay form .row .col .flex{
+	display: flex;
+	gap:15px;
+  }
+  
+  .container-pay form .row .col .flex .inputBox{
+	margin-top: 5px;
+  }
+  
+  .container-pay form .row .col .inputBox img{
+	height: 34px;
+	margin-top: 5px;
+	filter: drop-shadow(0 0 1px #000);
+  }
+  
+  .container-pay form .submit-btn{
+	width: 100%;
+	padding:12px;
+	font-size: 17px;
+	background:linear-gradient(45deg, rgb(43, 137, 226), rgb(20, 228, 255));
+	color:#fff;
+	margin-top: 5px;
+	cursor: pointer;
+  }
+  
+  .container-pay form .submit-btn:hover{
+	background:linear-gradient(45deg, rgb(43, 137, 226), rgb(20, 228, 255));
+  }
+
+  /* settings  */
+  #content main .setting{
+	display: flex;
+	flex-wrap: wrap;
+	grid-gap: 24px;
+	margin-top: 24px;
+	width: 100%;
+	
+	color: var(--dark);
+}
+#content main .setting > div {
+	border-radius: 20px;
+	background: var(--light);
+	padding: 50px;
+	overflow-x: auto;
+}
+#content main .setting .data{
+	display: flex;
+	align-items: center;
+	grid-gap: 16px;
+	margin-bottom: 24px;
+}
 
 
+  
+
+/* resposive */
 
 
 
@@ -648,67 +975,3 @@ color: red;
 	}
 }
 
-
-.flex {
-	
-	display: flex;
-	flex-wrap:wrap;
-	justify-content: center;
-	align-items:center;
-	margin: 0 auto;
-	border-radius:5px;
-  }
-  .element-center {
-	display: flex;
-	flex-direction:column;
-	justify-content: center;
-  }
-  
-  .typewrite {
-	  font-size: 16pt;
-	  margin: auto;
-	  display: flex;
-	  justify-content: center;
-  }
-  
-  
-  
-  #inputs {
-	  padding: 10px;
-  }
-  #inputs h2 {
-	padding: 10px;
-	color:var(--dark);
-	background: transparent;
-	font-size: 16px;
-}
-  
-  input,
-  button {
-	font-size: .85em;
-	padding: .65em 1em;
-	border-radius: .3em;
-	outline: 0;
-  }
-  input {
-	border: 2px solid #dcdcdc;
-	margin-right: 1em;
-  }
-  
-  button {
-	  color: white;
-	  background: #508abc;
-	  border: solid 1px;
-	  border-color: rgba(0, 0, 0, .1);
-	  cursor: pointer;
-  }
-  
-  label {
-	  font-size: 3em;
-	  color:var(--dark);
-	  background: transparent;
-  }
-  
-  #btnDeposit, #btnWithdraw {
-	  width: 8em;
-  }
