--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,4 @@
- ft-Admin-user-dashboard-183453033
-
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -20,7 +18,25 @@ body {
     align-items: center;
     border-bottom: 2px solid #f1f1f1;
 }
-
+.mode-switch {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    color: var(--app-content-main-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 8px;
+    cursor: pointer;
+  }
+  .mode-switch .moon {
+    fill: var(--app-content-main-color);
+  }
+  
+  .mode-switch.active .moon {
+    fill: none;
+  }
 .logo {
     display: flex;
     align-items: center;
