--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1346,9 +1346,155 @@ table tbody tr {
 }
 
 
+/* all user  */
 
 
+/* main--content */
 
+.main--content {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: calc(100% - 300px);
+    padding: 0 40px;
+    overflow-y: scroll;
+    transition: .3s;
+}
 
+.main--content.active {
+    width: calc(100% - 103px);
+}
 
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    margin-top: 30px;
+}
 
+.section--title {
+    font-weight: 400;
+}
+
+.dropdown {
+    outline: none;
+    border: none;
+    background-color: #f1f4f8;
+    border-radius: 5px;
+    width: 150px;
+    padding: 5px;
+}
+/* Cards Start  */
+
+.cards {
+    display: flex;
+    gap: 20px;
+}
+
+.card {
+    padding: 20px;
+    border-radius: 20px;
+    min-width: 230px;
+    height: auto;
+    transition: .3s;
+}
+
+.card:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card--data {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.fa-money-check{
+    font-size: 60px;
+}
+
+.card h1 {
+    font-size: 30px;
+    margin-top: 10px;
+}
+
+.card--icon--lg {
+    font-size: 80px;
+}
+
+.card--stats {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 5px;
+}
+
+.card--stats span {
+    display: flex;
+    align-items: center;
+}
+
+.card--icon {
+    margin-right: 5px;
+}
+
+.stat--icon {
+    color: #5f5ce0;
+}
+
+.up--arrow {
+    color: #70d7a5;
+}
+
+.down--arrow {
+    color: #e86786;
+}
+
+.card-1 {
+    background-color: rgba(80, 115, 251, .1);
+}
+
+.card-1 .card--title {
+    color: rgba(80, 115, 251, 1);
+}
+
+.card-1 .card--icon--lg {
+    color: rgba(80, 115, 251, .4);
+}
+
+.card-2 {
+    background-color: rgba(241, 210, 67, .1);
+}
+
+.card-2 .card--title {
+    color: rgba(241, 210, 67, 1);
+}
+
+.card-2 .card--icon--lg {
+    color: rgba(241, 210, 67, .4);
+}
+
+.card-3 {
+    background-color: rgba(112, 215, 165, .1);
+}
+
+.card-3 .card--title {
+    color: rgba(112, 215, 165, 1);
+}
+
+.card-3 .card--icon--lg {
+    color: rgba(112, 215, 165, .4);
+}
+
+.card-4 {
+    background-color: rgba(227, 106, 200, .1);
+}
+
+.card-4 .card--title {
+    color: rgba(227, 106, 200, 1);
+}
+
+.card-4 .card--icon--lg {
+    color: rgba(227, 106, 200, .4);
+}
