--- a/src/style.css
+++ b/src/style.css
@@ -1,83 +1,141 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background: rgb(245, 241, 241);
+body,
+input
+{
+  font-family: "Poppins", sans-serif;
 }
 
 .container {
-    float: right;
-    color: #000;
-    margin: 20px 10px 5px;
-    padding: 30px 20px 10px;
-    position: relative;
-    width: 80vw;
-    height: 90vh;
-    background: #fff;
-    border-radius: 15px;
-    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
-    overflow: hidden;
-}
-.container hr{
-    color: #486ce2;
-    width: 60px;
-    height: 4px;
-    background-color: #486ce2;
-    font-weight: bolder;  
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  padding: 2rem;
+  background-color: #fafafa;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-/* side panel  */
-
-.container::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -50%;
-    width: 90%;
-    height: 100%;
-    background: linear-gradient(-45deg, #0092d1, #0292cf);
-    z-index: 6;
-    transform: translateX(100%);
-    transition: 1s ease-in-out;
+.form {
+  width: 100%;
+  max-width: 820px;
+  background-color:  #0092d1;;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-/* login start */
+.contact-form {
+  background-color:  #fff;
+  position: relative;
+}
+
+.circle {
+  border-radius: 50%;
+  background: linear-gradient(135deg, transparent 20%, #0092d1, #0292cf);
+  position: absolute;
+}
+
+.circle.one {
+  width: 130px;
+  height: 130px;
+  top: 130px;
+  right: -40px;
+}
+
+.circle.two {
+  width: 80px;
+  height: 80px;
+  top: 10px;
+  right: 30px;
+}
+
+.contact-form:before {
+  content: "";
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  background-color:  #0092d1;
+  transform: rotate(45deg);
+  top: 50px;
+  left: -13px;
+}
+
 form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 40%;
-    min-width: 238px;
-    padding: 10px 30px;
+  padding: 2.3rem 2.2rem;
+  z-index: 10;
+  overflow: hidden;
+  position: relative;
 }
 
-/* Bordered form */
-form {
-    border: 0px solid #f1f1f1;
-  }
+.title {
+  color: #000;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+  margin-bottom: 0.7rem;
   
-  /* Full-width inputs */
-  input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 20px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-  }
-  
+}
+
+
+
+.input-container {
+  position: relative;
+  margin: 1rem 0;
+}
+
+.input[type=text], input[type=password] {
+  width: 100%;
+  outline: none;
+  border: 2px solid #131111;
+  background: none;
+  padding: 0.6rem 1.2rem;
+  color: #000;
+  font-weight: 500;
+  font-size: 0.95rem;
+  letter-spacing: 0.5px;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+
+
+.input-container label {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  padding: 0 0.4rem;
+  color: #000;
+  font-size: 0.9rem;
+  font-weight: 400;
+  pointer-events: none;
+  z-index: 1000;
+  transition: 0.5s;
+}
+ /* The "Forgot password" text */
+ span.psw {
+  float: right;
+  padding-top: 3px;
+  padding-right: 16px;
+}
+
+
+
   /* Set a style for all buttons */
   .btn1 {
-    background-color: #000;
+    background-color:#0092d1;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -97,7 +155,6 @@ form {
     border-radius: 10px;
     border: 3px solid #000;
   }
-  
   /* Add a hover effect for buttons */
   .btn1:hover {
     opacity: 0.10;
@@ -105,21 +162,215 @@ form {
   .btn2:hover {
     opacity: 0.10;
   }
-  
-  
-  /* Add padding to containers */
-  .container-fit {
-    padding: 16px;
+
+.input-container span {
+  position: absolute;
+  top: 0;
+  left: 25px;
+  transform: translateY(-50%);
+  font-size: 0.8rem;
+  padding: 0 0.4rem;
+  color: transparent;
+  pointer-events: none;
+  z-index: 500;
+}
+
+.input-container span:before,
+.input-container span:after {
+  content: "";
+  position: absolute;
+  width: 10%;
+  opacity: 0;
+  transition: 0.3s;
+  height: 5px;
+  background-color:  #ffff;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.input-container span:before {
+  left: 50%;
+}
+
+.input-container span:after {
+  right: 50%;
+}
+
+.input-container.focus label {
+  top: 0;
+  transform: translateY(-50%);
+  left: 25px;
+  font-size: 0.8rem;
+}
+
+.input-container.focus span:before,
+.input-container.focus span:after {
+  width: 50%;
+  opacity: 1;
+}
+
+.contact-info {
+  padding: 2.3rem 2.2rem;
+  position: relative;
+}
+
+.contact-info .title {
+  color:  #fff;
+  font-weight: bold;
+}
+.contact-info hr{
+  color: #f4f8fa;
+  width: 60px;
+  height: 4px;
+  background-color:#f0f2f3;
+  font-weight: bolder;  
+}
+
+.text {
+  color: #000;
+  margin: 1.5rem 0 2rem 0;
+}
+
+.information {
+  display: flex;
+  color: #555;
+  margin: 0.7rem 0;
+  align-items: center;
+  font-size: 0.95rem;
+}
+
+
+
+.contact-info:before {
+  content: "";
+  position: absolute;
+  width: 110px;
+  height: 100px;
+  border: 22px solid#0092d1;
+  border-radius: 50%;
+  bottom: -77px;
+  right: 50px;
+  opacity: 0.3;
+}
+
+.big-circle {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  background: linear-gradient(to bottom, #0092d1, #0292cf);
+  bottom: 50%;
+  right: 50%;
+  transform: translate(-40%, 38%);
+}
+
+.big-circle:after {
+  content: "";
+  position: absolute;
+  width: 360px;
+  height: 360px;
+  background-color: #fafafa;
+  border-radius: 50%;
+  top: calc(50% - 180px);
+  left: calc(50% - 180px);
+}
+
+.square {
+  position: absolute;
+  height: 400px;
+  top: 50%;
+  left: 50%;
+  transform: translate(181%, 11%);
+  opacity: 0.2;
+}
+
+/* Respontive  */
+
+@media (max-width: 850px) {
+  .form {
+    grid-template-columns: 1fr;
   }
-  
-  /* The "Forgot password" text */
-  span.psw {
-    float: right;
-    padding-top: 3px;
-    padding-right: 16px;
+
+  .contact-info:before {
+    bottom: initial;
+    top: -75px;
+    right: 65px;
+    transform: scale(0.95);
   }
-  
-  /* Change styles for span and cancel button on extra small screens */
+
+  .contact-form:before {
+    top: -13px;
+    left: initial;
+    right: 70px;
+  }
+
+  .square {
+    transform: translate(140%, 43%);
+    height: 350px;
+  }
+
+  .big-circle {
+    bottom: 75%;
+    transform: scale(0.9) translate(-40%, 30%);
+    right: 50%;
+  }
+
+  .text {
+    margin: 1rem 0 1.5rem 0;
+  }
+
+  .social-media {
+    padding: 1.5rem 0 0 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    padding: 1.5rem;
+  }
+
+  .contact-info:before {
+    display: none;
+  }
+
+  .square,
+  .big-circle {
+    display: none;
+  }
+
+  form,
+  .contact-info {
+    padding: 1.7rem 1.6rem;
+  }
+
+
+  .text,
+  .information
+ {
+    font-size: 0.8rem;
+  }
+
+  .title {
+    font-size: 1.15rem;
+  }
+
+  .social-icons a {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+  }
+
+  .icon {
+    width: 23px;
+  }
+
+  .input {
+    padding: 0.45rem 1.2rem;
+  }
+
+  .btn {
+    padding: 0.45rem 1.2rem;
+  }
   @media screen and (max-width: 300px) {
     span.psw {
       display: block;
@@ -127,96 +378,4 @@ form {
     }
     
   } 
-/* side panel start  */
-.panels-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 90%;
-    height: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.panel {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    width: 35%;
-    min-width: 238px;
-    padding: 0 10px;
-    text-align: center;
-    z-index: 6;
-}
-
-.left-panel {
-    pointer-events: none;
-}
-
-.content {
-    color: #fff;
-    transition: 1.1s ease-in-out;
-    transition-delay: 0.5s;
-}
-
-.panel h3 {
-    font-size: 24px;
-    font-weight: 600;
-}
-
-.panel p {
-    font-size: 15px;
-    padding: 10px 0;
-}
-
-/* .left-panel .image, */
-.left-panel .content {
-    transform: translateX(-200%);
-}
-
-/* .right-panel .image, */
-.right-panel .content {
-    transform: translateX(0);
-}
- 
-
-
-/*Responsive*/
-
-@media (max-width:979px) {
-    .container {
-        width: 100vw;
-        height: 90vh;
-    }
-}
-
-@media (max-width:735px) {
-    .container::before {
-        display: none;
-    }
-    form {
-        width: 90%;
-    }
-    form.sign-up-form {
-        display: none;
-    }
-    .container.container-fit{
-        display: flex;
-        opacity: 1;
-    }
-    .container.sign-up-mode2 form.sign-in-form {
-        display: none;
-    }
-    .panels-container {
-        display: none;
-    }
-   
-}
-
-@media (max-width:720px) {
-    form {
-        width: 90%;
-    }
 }
